src/compiler/Frontend/MiniJavaParser.java
// Generated from /Users/probst/workspace/MiniJava_Analysis/src/compiler/Frontend/MiniJava.g4 by ANTLR 4.1
package compiler.Frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJavaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MINUS=1, AND=2, EQUALS=3, LESSTHAN=4, GREATERTHAN=5, PLUS=6, TIMES=7, 
		DIVIDE=8, MODULO=9, EXCLAMATION=10, SEMICOLON=11, COMMA=12, EQUAL=13, 
		DOT=14, QUESTION=15, COLON=16, PLUSPLUS=17, MINUSMINUS=18, ROUNDOPEN=19, 
		ROUNDCLOSE=20, SQUAREOPEN=21, SQUARECLOSE=22, CURLYOPEN=23, CURLYCLOSE=24, 
		TRUE=25, FALSE=26, CLASS=27, EXTENDS=28, TYPEBOOLEAN=29, TYPEVOID=30, 
		TYPECHAR=31, TYPEDOUBLE=32, TYPEINT=33, PUBLIC=34, PRIVATE=35, STATIC=36, 
		THIS=37, IF=38, ELSE=39, WHILE=40, FOR=41, PRINT=42, PRINTLN=43, SQRT=44, 
		RETURN=45, NEW=46, VAR=47, TRY=48, CATCH=49, THROW=50, THROWS=51, SUPER=52, 
		TYPEDEF=53, STRUCT=54, FROM=55, IN=56, WHERE=57, SELECT=58, IDENT=59, 
		INT=60, DOUBLE=61, CHARVALUE=62, STRING=63, LINE_COMMENT=64, MULTILINE_COMMENT=65, 
		WHITESPACE=66;
	public static final String[] tokenNames = {
		"<INVALID>", "'-'", "'&&'", "'=='", "'<'", "'>'", "'+'", "'*'", "'/'", 
		"'%'", "'!'", "';'", "','", "'='", "'.'", "'?'", "':'", "PLUSPLUS", "MINUSMINUS", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'true'", "'false'", "'class'", 
		"'extends'", "'boolean'", "'void'", "'char'", "'double'", "'int'", "'public'", 
		"'private'", "'static'", "'this'", "'if'", "'else'", "'while'", "'for'", 
		"'System.out.print'", "'System.out.println'", "'Math.sqrt'", "'return'", 
		"'new'", "'var'", "'try'", "'catch'", "'throw'", "'throws'", "'super'", 
		"'typedef'", "'struct'", "'from'", "'in'", "'where'", "'select'", "IDENT", 
		"INT", "DOUBLE", "CHARVALUE", "STRING", "LINE_COMMENT", "MULTILINE_COMMENT", 
		"WHITESPACE"
	};
	public static final int
		RULE_program = 0, RULE_classDeclaration = 1, RULE_innerClassDeclaration = 2, 
		RULE_attributeDeclaration = 3, RULE_mainClass = 4, RULE_block = 5, RULE_varDeclaration = 6, 
		RULE_declExpression = 7, RULE_arrayinit = 8, RULE_variable = 9, RULE_type = 10, 
		RULE_typeBasic = 11, RULE_typeArray = 12, RULE_typeVar = 13, RULE_typeBoolean = 14, 
		RULE_typeInt = 15, RULE_typeChar = 16, RULE_typeDouble = 17, RULE_typeClass = 18, 
		RULE_methodDeclaration = 19, RULE_constructorDeclaration = 20, RULE_procType = 21, 
		RULE_typeVoid = 22, RULE_typedefDeclaration = 23, RULE_statement = 24, 
		RULE_tryBlock = 25, RULE_statementIf = 26, RULE_statementWhile = 27, RULE_statementAssign = 28, 
		RULE_statementOpAssign = 29, RULE_statementAssignArray = 30, RULE_statementPrint = 31, 
		RULE_statementPrintln = 32, RULE_statementMethod = 33, RULE_statementReturn = 34, 
		RULE_statementFor = 35, RULE_statementThrow = 36, RULE_statementPostIncrement = 37, 
		RULE_statementPostDecrement = 38, RULE_statementPreIncrement = 39, RULE_statementPreDecrement = 40, 
		RULE_varDeclarationStmt = 41, RULE_constructorCall = 42, RULE_expression = 43, 
		RULE_level1 = 44, RULE_level2 = 45, RULE_level3 = 46, RULE_level4 = 47, 
		RULE_level5 = 48, RULE_expressionUnaryMinus = 49, RULE_expressionNegation = 50, 
		RULE_expressionNewObject = 51, RULE_expressionNewArray = 52, RULE_expressionIdentifier = 53, 
		RULE_expressionArrayAccess = 54, RULE_expressionParentheses = 55, RULE_expressionConstantTrue = 56, 
		RULE_expressionConstantFalse = 57, RULE_expressionConstantInteger = 58, 
		RULE_expressionConstantString = 59, RULE_expressionConstantChar = 60, 
		RULE_expressionConstantDouble = 61, RULE_expressionMethodCall = 62, RULE_expressionPostIncrement = 63, 
		RULE_expressionPostDecrement = 64, RULE_expressionPreIncrement = 65, RULE_expressionPreDecrement = 66, 
		RULE_expressionTernary = 67, RULE_expressionMathSqrt = 68, RULE_expressionTypeCast = 69, 
		RULE_expressionLINQ = 70, RULE_identifier = 71, RULE_identifierIdentifier = 72, 
		RULE_identifierId = 73, RULE_idThis = 74, RULE_idIDENT = 75;
	public static final String[] ruleNames = {
		"program", "classDeclaration", "innerClassDeclaration", "attributeDeclaration", 
		"mainClass", "block", "varDeclaration", "declExpression", "arrayinit", 
		"variable", "type", "typeBasic", "typeArray", "typeVar", "typeBoolean", 
		"typeInt", "typeChar", "typeDouble", "typeClass", "methodDeclaration", 
		"constructorDeclaration", "procType", "typeVoid", "typedefDeclaration", 
		"statement", "tryBlock", "statementIf", "statementWhile", "statementAssign", 
		"statementOpAssign", "statementAssignArray", "statementPrint", "statementPrintln", 
		"statementMethod", "statementReturn", "statementFor", "statementThrow", 
		"statementPostIncrement", "statementPostDecrement", "statementPreIncrement", 
		"statementPreDecrement", "varDeclarationStmt", "constructorCall", "expression", 
		"level1", "level2", "level3", "level4", "level5", "expressionUnaryMinus", 
		"expressionNegation", "expressionNewObject", "expressionNewArray", "expressionIdentifier", 
		"expressionArrayAccess", "expressionParentheses", "expressionConstantTrue", 
		"expressionConstantFalse", "expressionConstantInteger", "expressionConstantString", 
		"expressionConstantChar", "expressionConstantDouble", "expressionMethodCall", 
		"expressionPostIncrement", "expressionPostDecrement", "expressionPreIncrement", 
		"expressionPreDecrement", "expressionTernary", "expressionMathSqrt", "expressionTypeCast", 
		"expressionLINQ", "identifier", "identifierIdentifier", "identifierId", 
		"idThis", "idIDENT"
	};

	@Override
	public String getGrammarFileName() { return "MiniJava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public List<TypedefDeclarationContext> typedefDeclaration() {
			return getRuleContexts(TypedefDeclarationContext.class);
		}
		public TypedefDeclarationContext typedefDeclaration(int i) {
			return getRuleContext(TypedefDeclarationContext.class,i);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); mainClass();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(153); classDeclaration();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPEDEF) {
				{
				{
				setState(159); typedefDeclaration();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public Token className;
		public Token superClassName;
		public AttributeDeclarationContext attributeDeclaration(int i) {
			return getRuleContext(AttributeDeclarationContext.class,i);
		}
		public TerminalNode CURLYOPEN() { return getToken(MiniJavaParser.CURLYOPEN, 0); }
		public List<InnerClassDeclarationContext> innerClassDeclaration() {
			return getRuleContexts(InnerClassDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public List<AttributeDeclarationContext> attributeDeclaration() {
			return getRuleContexts(AttributeDeclarationContext.class);
		}
		public InnerClassDeclarationContext innerClassDeclaration(int i) {
			return getRuleContext(InnerClassDeclarationContext.class,i);
		}
		public List<ConstructorDeclarationContext> constructorDeclaration() {
			return getRuleContexts(ConstructorDeclarationContext.class);
		}
		public ConstructorDeclarationContext constructorDeclaration(int i) {
			return getRuleContext(ConstructorDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public List<TerminalNode> IDENT() { return getTokens(MiniJavaParser.IDENT); }
		public TerminalNode EXTENDS() { return getToken(MiniJavaParser.EXTENDS, 0); }
		public TerminalNode IDENT(int i) {
			return getToken(MiniJavaParser.IDENT, i);
		}
		public TerminalNode CURLYCLOSE() { return getToken(MiniJavaParser.CURLYCLOSE, 0); }
		public TerminalNode CLASS() { return getToken(MiniJavaParser.CLASS, 0); }
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(165); match(CLASS);
			setState(166); ((ClassDeclarationContext)_localctx).className = match(IDENT);
			setState(169);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(167); match(EXTENDS);
				setState(168); ((ClassDeclarationContext)_localctx).superClassName = match(IDENT);
				}
			}

			setState(171); match(CURLYOPEN);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(172); innerClassDeclaration();
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(178); attributeDeclaration();
					}
					} 
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(184); constructorDeclaration();
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEBOOLEAN) | (1L << TYPEVOID) | (1L << TYPECHAR) | (1L << TYPEDOUBLE) | (1L << TYPEINT) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC) | (1L << VAR) | (1L << IDENT))) != 0)) {
				{
				{
				setState(190); methodDeclaration();
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(196); match(CURLYCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InnerClassDeclarationContext extends ParserRuleContext {
		public Token className;
		public AttributeDeclarationContext attributeDeclaration(int i) {
			return getRuleContext(AttributeDeclarationContext.class,i);
		}
		public TerminalNode CURLYOPEN() { return getToken(MiniJavaParser.CURLYOPEN, 0); }
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public List<AttributeDeclarationContext> attributeDeclaration() {
			return getRuleContexts(AttributeDeclarationContext.class);
		}
		public List<ConstructorDeclarationContext> constructorDeclaration() {
			return getRuleContexts(ConstructorDeclarationContext.class);
		}
		public ConstructorDeclarationContext constructorDeclaration(int i) {
			return getRuleContext(ConstructorDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public TerminalNode IDENT() { return getToken(MiniJavaParser.IDENT, 0); }
		public TerminalNode CURLYCLOSE() { return getToken(MiniJavaParser.CURLYCLOSE, 0); }
		public TerminalNode CLASS() { return getToken(MiniJavaParser.CLASS, 0); }
		public InnerClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerClassDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterInnerClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitInnerClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitInnerClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerClassDeclarationContext innerClassDeclaration() throws RecognitionException {
		InnerClassDeclarationContext _localctx = new InnerClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_innerClassDeclaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(198); match(CLASS);
			setState(199); ((InnerClassDeclarationContext)_localctx).className = match(IDENT);
			setState(200); match(CURLYOPEN);
			setState(204);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(201); attributeDeclaration();
					}
					} 
				}
				setState(206);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(210);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(207); constructorDeclaration();
					}
					} 
				}
				setState(212);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(216);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEBOOLEAN) | (1L << TYPEVOID) | (1L << TYPECHAR) | (1L << TYPEDOUBLE) | (1L << TYPEINT) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC) | (1L << VAR) | (1L << IDENT))) != 0)) {
				{
				{
				setState(213); methodDeclaration();
				}
				}
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219); match(CURLYCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeDeclarationContext extends ParserRuleContext {
		public Token visibility;
		public Token isStatic;
		public TerminalNode PUBLIC() { return getToken(MiniJavaParser.PUBLIC, 0); }
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public TerminalNode PRIVATE() { return getToken(MiniJavaParser.PRIVATE, 0); }
		public TerminalNode STATIC() { return getToken(MiniJavaParser.STATIC, 0); }
		public AttributeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterAttributeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitAttributeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitAttributeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeDeclarationContext attributeDeclaration() throws RecognitionException {
		AttributeDeclarationContext _localctx = new AttributeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			_la = _input.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				setState(221);
				((AttributeDeclarationContext)_localctx).visibility = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PUBLIC || _la==PRIVATE) ) {
					((AttributeDeclarationContext)_localctx).visibility = (Token)_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(225);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(224); ((AttributeDeclarationContext)_localctx).isStatic = match(STATIC);
				}
			}

			setState(227); varDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public Token className;
		public MethodDeclarationContext method;
		public TerminalNode CURLYOPEN() { return getToken(MiniJavaParser.CURLYOPEN, 0); }
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(MiniJavaParser.IDENT, 0); }
		public TerminalNode CURLYCLOSE() { return getToken(MiniJavaParser.CURLYCLOSE, 0); }
		public TerminalNode CLASS() { return getToken(MiniJavaParser.CLASS, 0); }
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitMainClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}
